--- a/papers/conext2022/main.tex
+++ b/papers/conext2022/main.tex
@@ -1,7 +1,7 @@
 \documentclass[10pt,sigconf,letterpaper,anonymous,nonacm]{acmart}
 \usepackage{mathtools}
 
-\title{Cloud Morphing: A Feedback Control Model for Distributed Resource Management}
+\title{Cloud Morphing: A Responsive Model for Distributed Resource Management}
 
 \begin{document}
 
@@ -9,17 +9,17 @@
 
 In this paper, we envision future distributed cloud services with
 abundant heterogeneous computing resources,
-and propose a dynamic pricing model as feedback control for
+and propose to apply dynamic pricing to a responsive model for
 distributed resource management.
 In this model, the pseudo cost of a resource is a function of the
 load, and the required resources for a job are allocated by a simple
 cost minimization algorithm.
-This simple mechanism enables automatic load-balancing and
-idle-resource pooling within the cloud, and allows operators to
-loosely control the utilization of each resource by manipulating the
-cost function. We examine different cost tuning methods for adjusting
-utilization, and prove the system to be robust against changing
-conditions. 
+We introduce a convex cost function that enables automatic
+load-balancing and idle-resource pooling within the cloud, and allows
+operators to loosely control the utilization of each resource by
+manipulating the cost function. We examine different cost tuning
+methods for adjusting utilization, and illustrate their behaviors by
+simulation.
 
 \end{abstract}
 
@@ -37,19 +37,13 @@ conditions.
 
 \input{simulation}
 
-\section{Extensions}
-
-\input{extensions}
-
 \section{Related Work}
 
 \input{related}
 
-\section{Summary}
+\section{Summary and Future Work}
 
-We have shown that ...
-
-Our simulation tool is publicly available from (URL removed for review).
+\input{extensions}
 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{cloudmorphing}
