--- a/papers/conext2022/extensions.tex
+++ b/papers/conext2022/extensions.tex
@@ -20,7 +20,7 @@ Also, it is necessary to develop mechanisms and protocols for
 discovering available resources~\cite{Albrecht2008} and exchanging
 cost information.
 A path selection mechanism is also needed when assigning a job,
-probabaly using SRv6 or other source routing mechanism.
+probably using SRv6 or other source routing mechanism.
 
 There exists a rich area for further research.
 \noindent
@@ -41,7 +41,7 @@ with rack-level resources.
 \noindent
 {\bf Inter-cloud:}
 The proposed system was originally designed mainly for a single
-administrave dmain.
+administrative domain.
 The hierarchical model, however, naturally extends to an inter-cloud
 model in which different cloud systems are federated.
 The mechanism of the idle resource pooling allows utilizing external
@@ -50,7 +50,7 @@ clouds when only needed.
 \noindent
 {\bf Crowdsourcing resource supply:}
 It would be possible to crowdsource the role of resource providers. 
-Then, we need a monetary charging, authentification and authorization
+Then, we need a monetary charging, authentication and authorization
 mechanisms to add externally provided resources to the resource pool.
 
 \noindent
