--- a/papers/conext2022/related.tex
+++ b/papers/conext2022/related.tex
@@ -1,5 +1,5 @@
 Congestion pricing and smart data pricing for networking have been
-exteneively studied~\cite{Sen-2013}.
+extensively studied~\cite{Sen-2013}.
 Early work includes congestion pricing by
 Murphy {\em et al.}~\cite{Murphy94distributedpricing},
 and auction-based resource allocation by
@@ -37,7 +37,7 @@ similar to our allocation model.
 
 A system model similar to ours is found in~\cite{Wagner-2012} where
 Wagner {\em et al.} used congestion pricing for resilient job
-allocation in a distributed millitary cloud.  They used a
+allocation in a distributed military cloud.  They used a
 game-theoretic resource allocation method based on Nash Bargaining,
 and developed a Hadoop-based prototype system.
 
