--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -29,7 +29,7 @@ Simulation scenarios:
   \item {\bf comparison:} compared with, no idle-resource pooling
   \item	{\bf surge:} same as above but with a request surge at one location
   \item	{\bf edge computing:} 2 nodes (big and small) and 1 link, the
-    users are closer to the small node. 2 types josb (interactive,
+    users are closer to the small node. 2 types jobs (interactive,
     data intensive).  show interactive jobs are on the small node,
     data intensive jobs are on the big node.
   \item {\bf premium service:} 4 nodes with 3 standard and 1 premium services.
