--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -64,7 +64,7 @@ heterogeneous resources, a cloud service instance emerges at the best
 location and, as the usage pattern changes, the service instance also
 transforms the locations of the resources and their connections.
 
-Microservice jobs are assigned so as to reduce the excecution cost that
+Microservice jobs are assigned so as to reduce the execution cost that
 consists of computing cost, communication cost with the user, access
 cost to database, and other factors.
 For examples, an interactive task will follow the user when the user
