--- a/papers/conext2022/main.tex
+++ b/papers/conext2022/main.tex
@@ -16,7 +16,7 @@ load, and the required resources for a job are allocated by a simple
 cost minimization algorithm.
 We introduce a convex cost function that enables automatic
 load-balancing and idle-resource pooling within the cloud, and allows
-operators to loosely control the utilization of each resource by
+stakeholders to loosely control the utilization of each resource by
 manipulating the cost function. We examine different cost tuning
 methods for adjusting utilization, and illustrate their behaviors by
 simulation.
