--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -8,7 +8,7 @@ The simulation setting is shown in Figure~\ref{fig:topology-simple}.
   \item		link: capacity 200 for MDC-DC, 1000 for DC-DC
 \end{itemize}
 
-\begin{figure}[htb]
+\begin{figure}[tb]
   \begin{center}
     \includegraphics[width=7.5cm,clip]{topology-simple.pdf}
     \vspace{-2.0ex}
